--- a/flaskapp/templates/pets/list.html
+++ b/flaskapp/templates/pets/list.html
@@ -6,15 +6,22 @@
 	<table class="table table-striped">
 	  <thead>
 	    <tr>
-	      <th scope="col">Name</th>
-	      <th scope="col">Date</th>
+	      <th>#</th>
+	      <th>Name</th>
+	      <th>Date</th>
+	      <th>Actions</th>
 	    </tr>
 	  </thead>
 	  <tbody>
 	{% for item in items %}
 	    <tr>
-	      <td>{{ item.name }}</td>
-	      <td>{{ item.created_at | strftime }}</td>
+	      	<td>{{ item.id }}</td>
+	      	<td>{{ item.name }}</td>
+	      	<td>{{ item.created_at | strftime }}</td>
+	      	<td>
+	      		<a class="btn btn-primary btn-sm" href="{{ url_for('pet.update', slug=item.name) }}" role="button">Edit</a>
+	      		<a class="btn btn-danger btn-sm" href="{{ url_for('pet.delete', slug=item.name) }}" role="button">Delete</a>
+        	</td>
 	    </tr>
 	{% endfor %}
 	  </tbody>
