--- a/flaskapp/templates/pets/list.html
+++ b/flaskapp/templates/pets/list.html
@@ -1,32 +1,37 @@
 {% extends "layout.html" %}
 {% block title %}List{% endblock %}
 {% block content %}
-	{% if items %}
-	<h2>Pets</h2>
-	<table class="table table-striped">
-	  <thead>
-	    <tr>
-	      <th>#</th>
-	      <th>Name</th>
-	      <th>Date</th>
-	      <th>Actions</th>
-	    </tr>
-	  </thead>
-	  <tbody>
-	{% for item in items %}
-	    <tr>
-	      	<td>{{ item.id }}</td>
-	      	<td>{{ item.name }}</td>
-	      	<td>{{ item.created_at | strftime }}</td>
-	      	<td>
-	      		<a class="btn btn-primary btn-sm" href="{{ url_for('pet.update', slug=item.name) }}" role="button">Edit</a>
-	      		<a class="btn btn-danger btn-sm" href="{{ url_for('pet.delete', slug=item.name) }}" role="button">Delete</a>
-        	</td>
-	    </tr>
-	{% endfor %}
-	  </tbody>
-	</table>
-	{% else %}
-	<h2>no pets</h2>
-	{% endif %}
+<div class="card">
+    <div class="card-header">
+        Pets
+        <div class="float-right">
+            <a class="btn btn-primary btn-sm" href="{{ url_for('pet.create') }}" role="button">Add</a>
+        </div>
+    </div>
+    <div class="card-body">
+        <table class="table table-striped">
+            <thead>
+            <tr>
+              <th>#</th>
+              <th>Name</th>
+              <th>Date</th>
+              <th>Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for item in items %}
+            <tr>
+                <td>{{ item.id }}</td>
+                <td>{{ item.name }}</td>
+                <td>{{ item.created_at | strftime }}</td>
+                <td>
+                    <a class="btn btn-primary btn-sm" href="{{ url_for('pet.update', slug=item.name) }}" role="button">Edit</a>
+                    <a class="btn btn-danger btn-sm" href="{{ url_for('pet.delete', slug=item.name) }}" role="button">Delete</a>
+                </td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
 {% endblock %}
