--- a/flaskapp/templates/pets/list.html
+++ b/flaskapp/templates/pets/list.html
@@ -25,8 +25,8 @@
                 <td>{{ item.name }}</td>
                 <td>{{ item.created_at | strftime }}</td>
                 <td>
-                    <a class="btn btn-primary btn-sm" href="{{ url_for('pet.update', slug=item.name) }}" role="button">Edit</a>
-                    <a class="btn btn-danger btn-sm" href="{{ url_for('pet.delete', slug=item.name) }}" role="button">Delete</a>
+                    <a class="btn btn-primary btn-sm" href="{{ url_for('pet.update', id=item.id) }}" role="button">Edit</a>
+                    <a class="btn btn-danger btn-sm" href="{{ url_for('pet.delete', id=item.id) }}" role="button">Delete</a>
                 </td>
             </tr>
             {% endfor %}
