--- a/flaskapp/templates/layout.html
+++ b/flaskapp/templates/layout.html
@@ -16,6 +16,10 @@
   <body>
     
     <div class="container">
+      <div class="text-center">
+        <h1 class="display-4">{{current_user.email}}</h1>        
+      </div>
+
       <div class="col-lg-12">
       {% block content %}{% endblock %}
       </div>
